--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html,body{
    text-underline-offset: 0.1em;
  }
  /* Link hover color */
- a:hover,.wp-block-post a:hover{
+ .gutena-pattern .wp-block-social-links .wp-block-social-link-anchor:hover,a:hover,.wp-block-post a:hover{
     color:var(--wp--preset--color--primary);
  }
  
@@ -74,10 +74,7 @@ html,body{
  .wp-block-navigation .wp-block-navigation-item.current-menu-item a,.wp-block-navigation .wp-block-navigation-item a:hover,.wp-block-navigation .wp-block-navigation-item a:focus {
    color:var(--wp--preset--color--primary);
  }
- /* Inline svg image hover color */
- .gutena-pattern .wp-block-image:not(.no-hover-color) a img:hover, .gutena-pattern:not(.no-hover-color) p a img:hover{
-    filter: url('#wp-duotone-foreground-and-primary');
- }
+ 
 /* Input Focus */
 input:not([type="submit"]):not([type="checkbox"]):focus,textarea:focus{
    outline:solid 1px var(--wp--preset--color--primary);
