fix-templates-navigation-spacing-add-typography-and-color

--- a/templates/page.html
+++ b/templates/page.html
@@ -3,11 +3,10 @@
 <main class="wp-block-group">
     <!-- wp:group {"layout":{"inherit":true}} -->
     <div class="wp-block-group">
-    <!-- wp:post-title {"level":1,"align":"wide","textAlign":"center","fontSize":"var(--wp--custom--typography--font-size--page-title)","style":{"spacing":{"margin":{"bottom":"50px"}}}} /-->
-    <!-- wp:post-featured-image {"align":"wide","style":{"spacing":{"margin":{"bottom":"50px"}}}} /-->
+    <!-- wp:post-title {"level":1,"align":"wide","textAlign":"center","fontSize":"var(--wp--custom--typography--font-size--page-title)","style":{"spacing":{"margin":{"bottom":"50px","top":"50px"}}}} /-->
     </div>
     <!-- /wp:group -->
-<!-- wp:post-featured-image {"align":"wide","style":{"spacing":{"margin":{"bottom":"10vh"}}}} /-->
+<!-- wp:post-featured-image {"align":"full","style":{"spacing":{"margin":{"bottom":"50px"}}}} /-->
 <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
 <!-- /wp:group -->
