--- a/templates/page-with-button-header.html
+++ b/templates/page-with-button-header.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header-with-button","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
-<!-- wp:post-featured-image {"align":"wide","style":{"spacing":{"margin":{"bottom":"10vh"}}}} /-->
+<!-- wp:post-featured-image {"align":"full","style":{"spacing":{"margin":{"bottom":"50px"}}}} /-->
 <!-- wp:post-content {"layout":{"inherit":true}} /-->
 </main>
 <!-- /wp:group -->
