--- a/templates/search.html
+++ b/templates/search.html
@@ -1,29 +1,8 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
  
-<!-- wp:group -->
-    <div class="wp-block-group"><!-- wp:columns {"style":{"spacing":{"padding":{"top":"10vh","bottom":"10vh","right":"20px","left":"20px"}}}} -->
-    <div class="wp-block-columns" style="padding-top:10vh;padding-right:20px;padding-bottom:10vh;padding-left:20px"><!-- wp:column {"width":"20%"} -->
-    <div class="wp-block-column" style="flex-basis:20%"></div>
-    <!-- /wp:column -->
-    
-    <!-- wp:column {"width":"60%"} -->
-    <div class="wp-block-column" style="flex-basis:60%">
-    <!-- wp:spacer -->
-    <div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    
-    <!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search","buttonText":"Search","buttonPosition":"button-inside","buttonUseIcon":true} /-->
-    <!-- /wp:column -->
-    
-     <!-- wp:spacer -->
-     <div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
-     <!-- /wp:spacer -->
-    </div>
-    <!-- wp:column {"width":"20%"} -->
-    <div class="wp-block-column" style="flex-basis:20%"></div>
-    <!-- /wp:column --></div>
-    <!-- /wp:columns --></div>
-    <!-- /wp:group -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"100px","bottom":"100px"}}},"layout":{"inherit":true}} -->
+<div class="wp-block-group" style="padding-top:100px;padding-bottom:100px"><!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search","textColor":"white"} /--></div>
+<!-- /wp:group -->
     
 <!-- wp:template-part {"slug":"main-default","tagName":"main","className":"gutena-site-main"} /-->
 <!-- wp:spacer {"height":"150px"} -->
