--- a/templates/single.html
+++ b/templates/single.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"20px"}}} -->
-<main  style="--wp--style--block-gap: 20px" class="wp-block-group">
+<main   class="wp-block-group">
     <!-- wp:spacer {"height":"20px"} -->
     <div style="height:20px" aria-hidden="true" class="wp-block-spacer"></div>
     <!-- /wp:spacer -->
