fix-spacing-in-single-post-content-add-variable-google-fonts-and-sidebar-template

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
  
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"100px","bottom":"100px"}}},"layout":{"inherit":true}} -->
-<div class="wp-block-group" style="padding-top:100px;padding-bottom:100px"><!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search","textColor":"white"} /--></div>
+<div class="wp-block-group" style="padding-top:100px;padding-bottom:100px"><!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search..","buttonText":"Search","buttonPosition":"button-inside","buttonUseIcon":true} /--></div>
 <!-- /wp:group -->
     
 <!-- wp:template-part {"slug":"main-default","tagName":"main","className":"gutena-site-main"} /-->
