--- a/templates/single-with--button-header.html
+++ b/templates/single-with--button-header.html
@@ -1,127 +1,5 @@
 <!-- wp:template-part {"slug":"header-with-button","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","align":"full"} -->
-<main class="wp-block-group alignfull">
-    <!-- wp:spacer {"height":"50px"} -->
-    <div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
-    <!-- wp:post-featured-image  /-->
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:spacer {"height":"40px"} -->
-    <div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
-        <!-- wp:group {"layout":{"inherit":true},"style":{"spacing":{"padding":{"left":"20px","right":"20px"}}}} -->
-        <div class="wp-block-group" style="padding-left:20px;padding-right:20px">
-        <!-- wp:post-title /-->
-
-        </div>
-        <!-- /wp:group -->
-
-        <!-- wp:spacer {"height":"15px"} -->
-        <div style="height:15px" aria-hidden="true" class="wp-block-spacer"></div>
-        <!-- /wp:spacer -->
-
-     <!-- wp:group {"style":{"spacing":{"padding":{"left":"20px","right":"20px"}}},"textColor":"secondary","layout":{"type":"flex","allowOrientation":false}} -->
-    <div class="wp-block-group has-secondary-color has-text-color" style="padding-right:20px;padding-left:20px"><!-- wp:post-date /-->
-
-    <!-- wp:paragraph {"fontSize":"small"} -->
-    <p class="has-small-font-size"> by </p>
-    <!-- /wp:paragraph -->
-    
-    <!-- wp:post-author {"showAvatar":false,"fontSize":"small"} /--></div>
-    <!-- /wp:group -->
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:spacer {"height":"26px"} -->
-    <div style="height:26px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:post-content {"layout":{"inherit":true}} /-->
-
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
-    <!-- wp:group {"style":{"spacing":{"padding":{"top":"29px","left":"20px","right":"20px"}}},"textColor":"secondary","layout":{"type":"flex","allowOrientation":false}} -->
-    <div class="wp-block-group has-secondary-color has-text-color" style="padding-top:29px;padding-left:20px;padding-right:20px"><!-- wp:paragraph {"fontSize":"small"} -->
-    <p class="has-small-font-size">Category: </p>
-    <!-- /wp:paragraph -->
-    
-    <!-- wp:post-terms {"term":"category","fontSize":"small"} /--></div>
-    <!-- /wp:group -->
-    
-    <!-- wp:spacer {"height":"69px"} -->
-    <div style="height:69px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:columns {"style":{"spacing":{"padding":{"left":"20px","right":"20px"}}}} -->
-    <div class="wp-block-columns" style="padding-right:20px;padding-left:20px"><!-- wp:column {"width":"70%"} -->
-    <div class="wp-block-column" style="flex-basis:70%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"30px","right":"30px","bottom":"30px","left":"30px"}}},"className":"guten-box-shadow is-style-gutena-box-shadow"} -->
-    <div class="wp-block-group guten-box-shadow is-style-gutena-box-shadow" style="padding-top:30px;padding-right:30px;padding-bottom:30px;padding-left:30px"><!-- wp:post-author {"avatarSize":96,"showBio":true,"className":"is-style-gutena-post-author-card"} /-->
-    
-    </div>
-    <!-- /wp:group --></div>
-    <!-- /wp:column -->
-    
-    <!-- wp:column {"width":"30%"} -->
-    <div class="wp-block-column" style="flex-basis:30%"></div>
-    <!-- /wp:column --></div>
-    <!-- /wp:columns -->
-    
-    <!-- wp:group -->
-    <div class="wp-block-group"><!-- wp:spacer {"height":"80px"} -->
-    <div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    
-    <!-- wp:group {"layout":{"inherit":true},"style":{"spacing":{"padding":{"left":"20px","right":"20px"}}}} -->
-    <div class="wp-block-group" style="padding-left:20px;padding-right:20px">
-    <!-- wp:separator {"color":"light-gray","align":"wide","className":"is-style-wide"} -->
-    <hr class="wp-block-separator alignwide has-text-color has-background has-light-gray-background-color has-light-gray-color is-style-wide"/>
-    <!-- /wp:separator -->
-    
-    <!-- wp:spacer {"height":"39px"} -->
-    <div style="height:39px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    
-    <!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-    <div class="wp-block-group" ><!-- wp:post-navigation-link {"textAlign":"left","type":"previous","label":"\u0026lt; Previous\u003cbr\u003e","showTitle":true} /-->
-    
-        <!-- wp:post-navigation-link {"textAlign":"right","label":"Next \u003e\u003cbr\u003e","showTitle":true} /--></div>
-        <!-- /wp:group -->
-    
-    <!-- wp:spacer {"height":"39px"} -->
-    <div style="height:39px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    
-    <!-- wp:separator {"color":"light-gray","align":"wide","className":"is-style-wide"} -->
-    <hr class="wp-block-separator alignwide has-text-color has-background has-light-gray-background-color has-light-gray-color is-style-wide"/>
-    <!-- /wp:separator -->
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:spacer {"height":"67px"} -->
-    <div style="height:67px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    <!-- wp:group {"layout":{"inherit":true},"style":{"spacing":{"padding":{"left":"20px","right":"20px"}}}} -->
-    <div class="wp-block-group" style="padding-right:20px;padding-left:20px" ><!-- wp:post-comments /--></div>
-    <!-- /wp:group -->
-    </div>
-    <!-- /wp:group -->
-    
-    <!-- wp:spacer {"height":"100px"} -->
-    <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    </div>
-    <!-- /wp:group -->
-</main>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"single-content","tagName":"main","className":"gutena-single-content"} /-->
 <!-- wp:separator {"color":"light-gray","align":"full","className":"is-style-wide"} -->
 <hr class="wp-block-separator alignfull has-text-color has-background has-light-gray-background-color has-light-gray-color is-style-wide"/>
 <!-- /wp:separator -->
