--- a/templates/single.html
+++ b/templates/single.html
@@ -1,94 +1,3 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-
-<!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"20px"}}} -->
-<main   class="wp-block-group">
-    <!-- wp:spacer {"height":"20px"} -->
-    <div style="height:20px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:post-featured-image {"align":"full"} /-->
-        <!-- wp:spacer {"height":"10px"} -->
-    <div style="height:10px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
-    <!-- wp:post-title /-->
-
-    
-     <!-- wp:group {"style":{"spacing":{"blockGap":"6px"}},"textColor":"secondary","layout":{"type":"flex","allowOrientation":false}} -->
-    <div class="wp-block-group has-secondary-color has-text-color" ><!-- wp:post-date /-->
-
-    <!-- wp:paragraph {"fontSize":"small"} -->
-    <p class="has-small-font-size"> by </p>
-    <!-- /wp:paragraph -->
-    
-    <!-- wp:post-author {"showAvatar":false,"fontSize":"small"} /--></div>
-    <!-- /wp:group -->
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:post-content {"layout":{"inherit":true}} /-->
-
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
-    <!-- wp:group {"style":{"spacing":{"padding":{"top":"29px"}}},"textColor":"secondary","layout":{"type":"flex","allowOrientation":false}} -->
-    <div class="wp-block-group has-secondary-color has-text-color" style="padding-top:29px;"><!-- wp:paragraph {"fontSize":"small"} -->
-    <p class="has-small-font-size">Category: </p>
-    <!-- /wp:paragraph -->
-    
-    <!-- wp:post-terms {"term":"category"} /--></div>
-    <!-- /wp:group -->
-    
-    <!-- wp:spacer {"height":"49px"} -->
-    <div style="height:49px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:columns  -->
-    <div class="wp-block-columns"><!-- wp:column {"width":"70%"} -->
-    <div class="wp-block-column" style="flex-basis:70%"><!-- wp:group {"style":{"spacing":{"padding":{"top":"30px","right":"30px","bottom":"30px","left":"30px"}}},"className":"guten-box-shadow is-style-gutena-box-shadow"} -->
-    <div class="wp-block-group guten-box-shadow is-style-gutena-box-shadow" style="padding-top:30px;padding-right:30px;padding-bottom:30px;padding-left:30px"><!-- wp:post-author {"avatarSize":96,"showBio":true,"className":"is-style-gutena-post-author-card"} /-->
-    
-    </div>
-    <!-- /wp:group --></div>
-    <!-- /wp:column -->
-    
-    <!-- wp:column {"width":"30%"} -->
-    <div class="wp-block-column" style="flex-basis:30%"></div>
-    <!-- /wp:column --></div>
-    <!-- /wp:columns -->
-    
-    <!-- wp:group -->
-    <div class="wp-block-group"><!-- wp:spacer {"height":"40px"} -->
-    <div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    
-    <!-- wp:separator {"color":"light-gray","align":"wide","className":"is-style-wide"} -->
-    <hr class="wp-block-separator alignwide has-text-color has-background has-light-gray-background-color has-light-gray-color is-style-wide"/>
-    <!-- /wp:separator -->
-    
-    <!-- wp:group {"style":{"spacing":{"padding":{"top":"20px","bottom":"20px"}}},"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-    <div class="wp-block-group" style="padding-top:20px;padding-bottom:20px"><!-- wp:post-navigation-link {"textAlign":"left","type":"previous","label":"\u0026lt; Previous\u003cbr\u003e","showTitle":true} /-->
-    
-        <!-- wp:post-navigation-link {"textAlign":"right","label":"Next \u003e\u003cbr\u003e","showTitle":true} /--></div>
-        <!-- /wp:group -->
-    
-    <!-- wp:separator {"color":"light-gray","align":"wide","className":"is-style-wide"} -->
-    <hr class="wp-block-separator alignwide has-text-color has-background has-light-gray-background-color has-light-gray-color is-style-wide"/>
-    <!-- /wp:separator -->
-    
-    <!-- wp:spacer {"height":"47px"} -->
-    <div style="height:47px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    <!-- wp:post-comments /-->
-    <!-- wp:spacer {"height":"80px"} -->
-    <div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-    </div>
-    <!-- /wp:group -->
-    
-    </div>
-    <!-- /wp:group -->
-</main>
-<!-- /wp:group -->
+<!-- wp:template-part {"slug":"single-content","tagName":"main","className":"gutena-single-content"} /-->
 <!-- wp:template-part {"slug":"footer","tagName":"footer" ,"className":"site-footer"} /-->
