--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ Author: ExpressTech
 Author URI: https://expresstech.io
 Description: Gutena is a future looking block based theme with full site editing in mind. It comes with block patterns and ready to use full page templates. 
 Tags: one-column, custom-colors, custom-logo, editor-style, featured-images, full-site-editing, block-patterns
-Version: 1.0.6
+Version: 1.0.7
 Requires at least: 5.8
-Tested up to: 5.9
+Tested up to: 6.0
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -138,9 +138,15 @@ padding-top: var(--wp--custom--spacing--small);
 .gutena-link-decoration-line-none a{
    text-decoration-line:none;
 }
+
  @media only screen and (max-width: 600px) {
    /* Header button */
    .gutena-header-with-button .wp-block-buttons.hide-in-mobile{
       display: none;
    }
  }
+
+/*Duotone for style vaiartion*/
+figure.gutena-foreground-and-primary-duotone img {
+   filter: var(--wp--preset--duotone--foreground-and-primary) !important;
+}
