--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: ExpressTech
 Author URI: https://expresstech.io
 Description: Gutena is a free block theme for WordPress with modern block patterns in-built. It comes packed with beautiful design elements which suits a variety of use cases. Gutena aims to be the forefont of WordPress FSE (Full Site Editing) philosphy. Building on top of the core editor Gutena promises a performant website with a score of 95 and above on core web vitals for speed. Using Gutena is very easy, just import a pre-built demo via our companion plugin (Gutena Kit) or use fully built block patterns. Our customer love us for our simplicity and following the block standards. 
 Tags: one-column, custom-colors, custom-logo, editor-style, featured-images, full-site-editing, block-patterns
-Version: 1.1.0
+Version: 1.1.1
 Requires at least: 5.8
 Tested up to: 6.0
 Requires PHP: 5.6
@@ -180,4 +180,9 @@ figure.gutena-foreground-and-primary-duotone img {
 .gutena-post-comment-container .wp-block-post-comments .comment-form-cookies-consent {
    padding-top: 10px;
    padding-bottom: 10px;
+}
+
+/*Block Editor reusable block full width */
+.block-editor-block-list__block.is-reusable.wp-block-block {
+   max-width: 100%;
 }
