--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 <main class="wp-block-group">
     <!-- wp:group {"layout":{"inherit":true}} -->
     <div class="wp-block-group">
-    <!-- wp:post-title {"level":1,"align":"wide","textAlign":"center","fontSize":"var(--wp--custom--typography--font-size--page-title)","style":{"spacing":{"margin":{"bottom":"50px","top":"50px"}}}} /-->
+    <!-- wp:post-title {"level":1,"align":"wide","textAlign":"center", "style":{"spacing":{"margin":{"bottom":"50px","top":"50px"}}}} /-->
     </div>
     <!-- /wp:group -->
 <!-- wp:post-featured-image {"align":"full","style":{"spacing":{"margin":{"bottom":"50px"}}}} /-->
