--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,7 +1,1 @@
-<!-- wp:pattern {"slug":"gutena/header-static"} /-->
-<!-- wp:group {"tagName":"main"} -->
-<main class="wp-block-group">
-<!-- wp:pattern {"slug":"gutena/page-business"} /-->
-</main>
-<!-- /wp:group -->
-<!-- wp:template-part {"slug":"footer-four-column","tagName":"footer" ,"className":"site-footer"} /-->
+<!-- wp:pattern {"slug":"gutena/page-creatives"} /-->
