--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <!-- wp:pattern {"slug":"gutena/section-text-between-icons"} /-->
     <!-- wp:group {"layout":{"type":"constrained","contentSize":"1070px"}} -->
     <div class="wp-block-group">
-        <!-- wp:pattern {"slug":"gutena/query-grid"} /-->
+        <!-- wp:pattern {"slug":"gutena/query-grid-feature-img-title-tag"} /-->
     </div>
     <!-- /wp:group -->
 </div>
