--- a/templates/single.html
+++ b/templates/single.html
@@ -1,2 +1,2 @@
-<!-- wp:pattern {"slug":"gutena/template-single"} /-->    
+<!-- wp:pattern {"slug":"gutena/template-part-single"} /-->    
 <!-- wp:template-part {"slug":"footer","theme":"gutena","tagName":"footer","className":"site-footer"} /-->
